--- a/.github/workflows/spotbugs.yml
+++ b/.github/workflows/spotbugs.yml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Run spotbugs with Gradle
         run: ./gradlew spotbugsMain        
       - uses: jwgmeligmeyling/spotbugs-github-action@master
