--- a/build.gradle
+++ b/build.gradle
@@ -328,37 +328,37 @@ task fatJarTunaTwoPunchCalibrator(type: com.github.jengelman.gradle.plugins.shad
 //this task can be called as ./gradlew buildSampleFiles and simply rebuilds the "YAML Samples" folder
 task buildSampleFiles(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'uk.ac.ox.oxfish.experiments.BuildSampleInputs'
+    mainClass = 'uk.ac.ox.oxfish.experiments.BuildSampleInputs'
 }
 
 task optimizer(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'uk.ac.ox.oxfish.MainOptimizer'
+    mainClass = 'uk.ac.ox.oxfish.MainOptimizer'
 }
 
 task sample_inputs(type: JavaExec) {
-    main = 'uk.ac.ox.oxfish.experiments.BuildSampleInputs'
+    mainClass = 'uk.ac.ox.oxfish.experiments.BuildSampleInputs'
     classpath = sourceSets.main.runtimeClasspath
 }
 
 task appendix(type: JavaExec) {
-    main = 'uk.ac.ox.oxfish.experiments.FirstPaper'
+    mainClass = 'uk.ac.ox.oxfish.experiments.FirstPaper'
     classpath = sourceSets.main.runtimeClasspath
 }
 
 task execute(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "package.MyDefaultMain"
+    mainClass = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "package.MyDefaultMain"
     jvmArgs = ["-XX:+HeapDumpOnOutOfMemoryError"]
 }
 
 task algorithms(type: JavaExec) {
-    main = 'uk.ac.ox.oxfish.experiments.SocialTuningExercise'
+    mainClass = 'uk.ac.ox.oxfish.experiments.SocialTuningExercise'
     classpath = sourceSets.main.runtimeClasspath
 }
 
 task batch(type: JavaExec) {
-    main = 'uk.ac.ox.oxfish.gui.BatchRunnerSetup'
+    mainClass = 'uk.ac.ox.oxfish.gui.BatchRunnerSetup'
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -388,8 +388,8 @@ spotbugs {
 
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
