--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -7,11 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0 # needed to find a merge base to identify modified files
       - name: Lint Code Base
-        uses: github/super-linter@v4.2.2
+        uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
