--- a/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
+++ b/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
@@ -20,18 +20,9 @@ EPO Abundance Pathfinding:
   additionalStartables:
   - IATTC Closure Period Randomizer:
       proportionOfBoatsInClosureA: '0.5'
-  attractionWeightsFile: inputs/epo_inputs/tests/backsliding/action_weights.csv
-  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
-    abundanceFilters: null
-    catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
-    speciesCodesSupplier: &id003 !!uk.ac.ox.oxfish.biology.SpeciesCodesFromFileFactory
-      speciesCodeFile:
-        inputFolder: &id001
-          path: inputs/epo_inputs
-        path: species_codes.csv
-    yearlyReset: false
   costsFile:
-    inputFolder: *id001
+    inputFolder: &id001
+      path: inputs/epo_inputs
     path: costs.csv
   currentPatternMapSupplier: &id002
     currentFiles:
@@ -40,29 +31,33 @@ EPO Abundance Pathfinding:
       Y2018: currents/currents_2018.csv
     inputFolder: *id001
   destinationStrategy:
+    actionWeightsFile:
+      inputFolder: *id001
+      path: action_weights.csv
     additionalHourlyDelayDeployment: '0.1'
     additionalHourlyDelayDolphinSets: '5.0'
     additionalHourlyDelayNonAssociatedSets: '5.0'
-    attractionWeightsFile: inputs/epo_inputs/location_values.csv
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
-      abundanceFilters: null
-      catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
+      abundanceFiltersFactory: null
+      catchSamplesFile: inputs/epo_inputs/set_samples.csv
       speciesCodesSupplier: null
       yearlyReset: false
     delSetsRangeInSeatiles: '0.0'
     deploymentBias: '1.0'
     fadModule:
       Centroid FAD Planning:
-        bannedXCoordinateBounds: ''
-        bannedYCoordinateBounds: ''
+        bannedXCoordinateBounds: -1,75
+        bannedYCoordinateBounds: 47, 51
         discretization:
           Squared Discretization:
-            horizontalSplits: '5.0'
+            horizontalSplits: '6.0'
             verticalSplits: '3.0'
-        distancePenalty: '9.819280341'
-        minimumValueFadSets: '6971.021459999999'
-    hoursWastedOnFailedSearches: '1.4932888800000002'
-    maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
+        distancePenalty: '1.0'
+        minimumValueFadSets: '5000.0'
+    hoursWastedOnFailedSearches: '20.0'
+    maxTripDurationFile: &id004
+      inputFolder: *id001
+      path: tests/backsliding/boats.csv
     minimumPercentageOfTripDurationAllowed: '1.0'
     minimumValueOpportunisticFadSets: '5000.0'
     noaBias: '1.0'
@@ -70,7 +65,7 @@ EPO Abundance Pathfinding:
     noaSetsRangeInSeatiles: '0.0'
     ownFadActionWeightBias: '1.0'
     planningHorizonInHours: '168.0'
-    purgeIllegalActionsImmediately: false
+    purgeIllegalActionsImmediately: true
     uniqueCatchSamplerForEachStrategy: false
   fadInitializerFactory:
     Abundance FAD Beta Initializer With Expiration:
@@ -122,7 +117,10 @@ EPO Abundance Pathfinding:
     priceFile:
       inputFolder: *id001
       path: prices.csv
-    speciesCodesSupplier: *id003
+    speciesCodesSupplier: &id003 !!uk.ac.ox.oxfish.biology.SpeciesCodesFromFileFactory
+      speciesCodeFile:
+        inputFolder: *id001
+        path: species_codes.csv
   portInitializer: !!uk.ac.ox.oxfish.geography.ports.FromSimpleFilePortInitializer
     portFile:
       inputFolder: *id001
@@ -233,9 +231,7 @@ EPO Abundance Pathfinding:
     - '2017-10-01'
     recruitmentProcesses: null
   speciesCodesSupplier: *id003
-  vesselsFile:
-    inputFolder: *id001
-    path: tests/backsliding/boats.csv
+  vesselsFile: *id004
   weightGroupsFactory:
     weightGroupCutoffsPerSpecies:
       Bigeye tuna:
