refine interface of relative files

--- a/POSEIDON/inputs/tests/fixed_recruits_indonesia.yaml
+++ b/POSEIDON/inputs/tests/fixed_recruits_indonesia.yaml
@@ -683,7 +683,7 @@ Flexible:
       header: true
       latLong: true
       mapFile:
-        folder: !!uk.ac.ox.oxfish.model.scenario.RootFolder
+        parent:
           path: inputs/indonesia
         path: 712/712_map.csv
   mapMakerDedicatedRandomSeed: null
