--- a/POSEIDON/build.gradle
+++ b/POSEIDON/build.gradle
@@ -44,7 +44,8 @@ sourceSets {
 //here we add all the dependencies notice that mason and geomason are not on maven so we need to add them separately
 dependencies {
 
-    implementation(project(":regulations:api"))
+    implementation(project(":regulations:core"))
+    api(project(":common:api"))
 
     //mason libraries. They aren't on maven so we have to lug their jars around
     api fileTree(dir: 'libs/mason', include: '*.jar')
