--- a/POSEIDON/build.gradle
+++ b/POSEIDON/build.gradle
@@ -38,8 +38,10 @@ sourceSets {
 //here we add all the dependencies notice that mason and geomason are not on maven so we need to add them separately
 dependencies {
 
-    implementation(project(":common:api"))
+    api(project(":common:api"))
+    api(project(":agents:api"))
     implementation(project(":agents:core"))
+    api(project(":regulations:api"))
     implementation(project(":regulations:core"))
 
     //mason libraries. They aren't on maven so we have to lug their jars around
