--- a/.editorconfig
+++ b/.editorconfig
@@ -43,9 +43,9 @@ ij_java_array_initializer_right_brace_on_new_line = false
 ij_java_array_initializer_wrap = off
 ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
-ij_java_assignment_wrap = off
+ij_java_assignment_wrap = normal
 ij_java_binary_operation_sign_on_next_line = false
-ij_java_binary_operation_wrap = off
+ij_java_binary_operation_wrap = normal
 ij_java_blank_lines_after_anonymous_class_header = 0
 ij_java_blank_lines_after_class_header = 0
 ij_java_blank_lines_after_imports = 1
@@ -115,20 +115,20 @@ ij_java_imports_layout = *, |, javax.**, java.**, |, $*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
 ij_java_insert_override_annotation = true
-ij_java_keep_blank_lines_before_right_brace = 2
-ij_java_keep_blank_lines_between_package_declaration_and_header = 2
-ij_java_keep_blank_lines_in_code = 2
-ij_java_keep_blank_lines_in_declarations = 2
+ij_java_keep_blank_lines_before_right_brace = 1
+ij_java_keep_blank_lines_between_package_declaration_and_header = 1
+ij_java_keep_blank_lines_in_code = 1
+ij_java_keep_blank_lines_in_declarations = 1
 ij_java_keep_builder_methods_indents = false
 ij_java_keep_control_statement_in_one_line = true
 ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
-ij_java_keep_line_breaks = true
+ij_java_keep_line_breaks = false
 ij_java_keep_multiple_expressions_in_one_line = false
-ij_java_keep_simple_blocks_in_one_line = false
-ij_java_keep_simple_classes_in_one_line = false
-ij_java_keep_simple_lambdas_in_one_line = false
-ij_java_keep_simple_methods_in_one_line = false
+ij_java_keep_simple_blocks_in_one_line = true
+ij_java_keep_simple_classes_in_one_line = true
+ij_java_keep_simple_lambdas_in_one_line = true
+ij_java_keep_simple_methods_in_one_line = true
 ij_java_label_indent_absolute = false
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
@@ -253,8 +253,8 @@ ij_java_static_field_name_prefix =
 ij_java_static_field_name_suffix =
 ij_java_subclass_name_prefix =
 ij_java_subclass_name_suffix = Impl
-ij_java_ternary_operation_signs_on_next_line = false
-ij_java_ternary_operation_wrap = off
+ij_java_ternary_operation_signs_on_next_line = true
+ij_java_ternary_operation_wrap = normal
 ij_java_test_name_prefix =
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = off
@@ -267,6 +267,6 @@ ij_java_variable_annotation_wrap = off
 ij_java_visibility = public
 ij_java_while_brace_force = never
 ij_java_while_on_new_line = false
-ij_java_wrap_comments = false
-ij_java_wrap_first_method_in_call_chain = false
-ij_java_wrap_long_lines = false
+ij_java_wrap_comments = true
+ij_java_wrap_first_method_in_call_chain = true
+ij_java_wrap_long_lines = true
