--- a/.editorconfig
+++ b/.editorconfig
@@ -45,7 +45,7 @@ ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
 ij_java_assignment_wrap = normal
 ij_java_binary_operation_sign_on_next_line = false
-ij_java_binary_operation_wrap = normal
+ij_java_binary_operation_wrap = on_every_item
 ij_java_blank_lines_after_anonymous_class_header = 0
 ij_java_blank_lines_after_class_header = 0
 ij_java_blank_lines_after_imports = 1
@@ -123,7 +123,7 @@ ij_java_keep_builder_methods_indents = false
 ij_java_keep_control_statement_in_one_line = true
 ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
-ij_java_keep_line_breaks = false
+ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
 ij_java_keep_simple_blocks_in_one_line = true
 ij_java_keep_simple_classes_in_one_line = true
@@ -133,8 +133,8 @@ ij_java_label_indent_absolute = false
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
 ij_java_layout_static_imports_separately = true
-ij_java_line_comment_add_space = false
-ij_java_line_comment_add_space_on_reformat = false
+ij_java_line_comment_add_space = true
+ij_java_line_comment_add_space_on_reformat = true
 ij_java_line_comment_at_first_column = true
 ij_java_local_variable_name_prefix =
 ij_java_local_variable_name_suffix =
@@ -143,7 +143,7 @@ ij_java_method_brace_style = end_of_line
 ij_java_method_call_chain_wrap = on_every_item
 ij_java_method_parameters_new_line_after_left_paren = true
 ij_java_method_parameters_right_paren_on_new_line = true
-ij_java_method_parameters_wrap = on_every_item
+ij_java_method_parameters_wrap = split_into_lines
 ij_java_modifier_list_wrap = false
 ij_java_multi_catch_types_wrap = normal
 ij_java_names_count_to_use_import_on_demand = 3
@@ -158,7 +158,7 @@ ij_java_parentheses_expression_new_line_after_left_paren = false
 ij_java_parentheses_expression_right_paren_on_new_line = false
 ij_java_place_assignment_sign_on_next_line = false
 ij_java_prefer_longer_names = true
-ij_java_prefer_parameters_wrap = false
+ij_java_prefer_parameters_wrap = true
 ij_java_record_components_wrap = normal
 ij_java_repeat_synchronized = true
 ij_java_replace_instanceof_and_cast = true
